--- a/src/main/resources/templates/reservationConfirmation_F.html
+++ b/src/main/resources/templates/reservationConfirmation_F.html
@@ -42,5 +42,6 @@
 <!--<p><a href="${filePath}" target="${filePath}">${filePath}</a></p>-->
 <!--<p><a href="${filePath}" target="_blank">${filePath}</a></p>-->
 <!--<a href="${filePath}">Download Itinerary</a>-->
+<a href="http://localhost:8080/abc-airlines/login-user" class="button">Go to Login Page</a>
 </body>
 </html>
