--- a/src/main/resources/templates/reservationConfirmation_B.html
+++ b/src/main/resources/templates/reservationConfirmation_B.html
@@ -27,16 +27,16 @@
 <hr>
 <p th:text="${msg}"></p>
 <hr>
-<h2>Your flight itinerary:</h2>
-<p><strong>Departure city:</strong> <span th:text="${flight.departureCity}"></span></p>
-<p><strong>Arrival city:</strong> <span th:text="${flight.arrivalCity}"></span></p>
-<p><strong>Flight number:</strong> <span th:text="${flight.flightNumber}"></span></p>
-<p><strong>Departure time:</strong> <span th:text="${flight.estimatedDepartureTime}"></span></p>
-<!--<p>Passenger Details:</p>-->
-<!--<p>First Name: <span th:text="${reservationRequest.getPassengerFirstName()}"></span></p>-->
-<!--<p>Last Name: <span th:text="${reservationRequest.getPassengerLastName()}"></span></p>-->
-<!--<p>Email: <span th:text="${reservationRequest.getPassengerEmail()}"></span></p>-->
-<!--<p>Phone: <span th:text="${reservationRequest.getPassengerPhone()}"></span></p>-->
+<h2>Your train itinerary:</h2>
+<p><strong>Bus number:</strong> <span th:text="${bus.trainNumber}"></span></p>
+<p><strong>Bus name:</strong> <span th:text="${bus.trainName}"></span></p>
+<p><strong>From station:</strong> <span th:text="${bus.fromStation}"></span></p>
+<p><strong>To station:</strong> <span th:text="${bus.toStation}"></span></p>
+<p><strong>Date of departure:</strong> <span th:text="${bus.dateOfDeparture}"></span></p>
+<p><strong>Departure time:</strong> <span th:text="${bus.departureTime}"></span></p>
+<p><strong>Arrival time:</strong> <span th:text="${bus.arrivalTime}"></span></p>
+<p><strong>Journey time:</strong> <span th:text="${bus.journeyTime}"></span></p>
+<p><strong>Price:</strong> <span th:text="${bus.price}"></span></p>
 <h2>PDF file path:</h2>
 <p><span class="link" th:text="${filePath}" th:onclick="'window.open(\'' + ${filePath} + '\')'"></span></p>
 <!--<p><a href="${filePath}" target="${filePath}">${filePath}</a></p>-->
